--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -27,7 +27,17 @@
 }
 
 #burst {
-	margin:0 0 0 -20px;
+	h1, h2, h3, h4, h5 ,h6, p{
+		color: @text-color;
+	}
+	p, label{
+		font-size: @default-font-size;;
+		font-weight: 500;
+	}
+	.burst-grid-title{
+		font-size: 18px;
+	}
+	margin: 0 0 0 -20px;
 	font-size: @default-font-size;
 	#burst-header {
 		display: flex;
@@ -358,7 +368,7 @@
 	.burst-general-settings #burst-content-area .burst-grid{
 		display: grid;
 		grid-template-columns: repeat(4, calc(25% - 15px) [col-start]); // We use calc because of the grid gap
-		grid-template-rows: 50%;
+		grid-template-rows: repeat( min-content );
 		margin: @grid_margin;
 		margin-top: @grid_margin * 2;
 		grid-gap: @grid_margin * 2;
@@ -366,6 +376,10 @@
 
 		h1, h2, h3, h4, h5 ,h6, p{
 			color: @text-color;
+		}
+		p, label{
+			font-size: 15px;
+    		font-weight: 500;
 		}
 		.wrap{
 			.burst-block;
@@ -376,14 +390,14 @@
 			justify-content: flex-start;
 			flex-direction: column;
 			flex-basis: 100%;
-			height: 100%;
+			min-height: 100%;
 		}
 		.burst-grid-header{
 			width: 100%;
 			box-sizing: border-box;
 			h1{
-				font-size: 20px;
-				font-weight: bold;
+				font-size: 17px;
+				font-weight: 600;
 			}
 			border-bottom: @border;
 			padding: 10px 15px;
