--- a/grid/css/muuri.less
+++ b/grid/css/muuri.less
@@ -5,7 +5,7 @@
     .burst-grid {
         width: calc(100% - 20px); 
         padding: 10px;
-        position: absolute;
+        // position: absolute;
         height: @gridblock_height;
         min-height: 500px;
         z-index: 1;
