--- a/assets/css/metabox.less
+++ b/assets/css/metabox.less
@@ -54,4 +54,16 @@
 			margin-bottom: 0;
 		}
 	}
+	.burst-experiment-save-button{
+		display: flex;
+		justify-content: space-between;
+		.burst-experiment-status{
+			margin: 0;
+			//border: 1px solid @grey;
+			// box-shadow: @box-shadow;
+			background: #f1f1f1;
+			font-weight: 600;
+			font-size: 13px;
+		}
+	}
 }
