--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -18,8 +18,8 @@
 @big-margin: 30px;
 
 @border-radius: 5px;
-@border: 1px solid #ededed;
-@box-shadow: 1px 1px #dedede;
+@border: 1px solid @border-color;
+@box-shadow: 1px 1px @border-color;
 
 // RSP Brand Colors
 @rsp-black: #333;
