--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -133,7 +133,7 @@
   margin-left: auto;
 }
 #burst .burst-skeleton:empty {
-  width: 350px;
+  width: 100%;
   height: 400px;
   /* change height to see repeat-y behavior */
   background-image: linear-gradient(100deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 80%), linear-gradient(#dadada 20px, transparent 0), linear-gradient(#dadada 20px, transparent 0), linear-gradient(#dadada 20px, transparent 0), linear-gradient(#dadada 20px, transparent 0);
