--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -133,7 +133,7 @@
 	*/
 	.burst-skeleton:empty {
 
-		width: 350px;
+		width: 100%;
 		height: 400px; /* change height to see repeat-y behavior */
 
 		background-image:
