new a/b testing approach

--- a/assets/css/admin-bar.css
+++ b/assets/css/admin-bar.css
@@ -20,7 +20,7 @@
   background-color: #E35899;
 }
 .rsp-green {
-  background-color: #22932e;
+  background-color: #61CE70;
 }
 .grey {
   background-color: #c6c6c6;
