--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -686,3 +686,4 @@ input:focus + .burst-slider {
 .wp-core-ui .button.button-tertiary:hover {
   background-color: #b92538;
 }
+/*# sourceMappingURL=admin.css.map */
