--- a/shepherd/css/tour.css
+++ b/shepherd/css/tour.css
@@ -14,7 +14,7 @@
   z-index: 2;
 }
 .shepherd-element.shepherd-theme-arrows.shepherd-has-title .shepherd-content header {
-  background-color: #22932e;
+  background-color: #61CE70;
   display: inline-block;
   width: 100%;
   height: 45px;
