--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -451,6 +451,7 @@
 			display: flex;
 			flex-wrap: wrap;
 			align-items: center;
+			justify-content: space-between;
 			width: 100%;
 			min-height: 51px;
 			box-sizing: border-box;
@@ -673,9 +674,23 @@
 		margin: 0;
 		padding: 0;
 		&.burst-bullet{
+			transition: all 0.5s ease;
 			margin-right: 5px;
+			&.loading{
+				animation: grow-and-shrink 1s infinite;
+			}
 		}
+		
 	}
+}
+@keyframes grow-and-shrink {
+	0%, 100%{
+		transform: scale(1.2);	
+	}
+	50% {
+		transform: scale(1);
+	}
+	
 }
 
 .toplevel_page_burst, .burst-1_page_burst-experiments, .burst-1_page_burst-settings{
