--- a/assets/css/metabox.less
+++ b/assets/css/metabox.less
@@ -14,9 +14,6 @@
 		    font-weight: 600;
 		}
 	}
-	.burst-experiment-save-button{
-		margin-top: @default-margin;
-	}
 	.burst-experiment-settings-info{
 		//padding: 10px;
 		//border-radius: 5px;
@@ -55,10 +52,13 @@
 		}
 	}
 	.burst-experiment-save-button{
+		margin-top: @default-margin;
 		display: flex;
+		flex-wrap: wrap;
 		justify-content: space-between;
 		.burst-experiment-status{
 			margin: 0;
+			margin-bottom: 10px;
 			//border: 1px solid @grey;
 			// box-shadow: @box-shadow;
 			background: #f1f1f1;
