Changed metabox css

--- a/assets/css/metabox.less
+++ b/assets/css/metabox.less
@@ -52,18 +52,18 @@
 		}
 	}
 	.burst-experiment-save-button{
-		margin-top: @default-margin;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
 		.burst-experiment-status{
 			margin: 0;
-			margin-bottom: 10px;
-			//border: 1px solid @grey;
-			// box-shadow: @box-shadow;
+			margin-top: @default-margin;
 			background: #f1f1f1;
 			font-weight: 600;
 			font-size: 13px;
+		}
+		input{
+			margin-top: @default-margin;
 		}
 	}
 }
