--- a/assets/css/metabox.css
+++ b/assets/css/metabox.css
@@ -46,15 +46,17 @@
   margin-bottom: 0;
 }
 #burst-metabox-experiment-settings .burst-experiment-save-button {
-  margin-top: 15px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 #burst-metabox-experiment-settings .burst-experiment-save-button .burst-experiment-status {
   margin: 0;
-  margin-bottom: 10px;
+  margin-top: 15px;
   background: #f1f1f1;
   font-weight: 600;
   font-size: 13px;
+}
+#burst-metabox-experiment-settings .burst-experiment-save-button input {
+  margin-top: 15px;
 }
