--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -50,6 +50,7 @@
 @color-success: @rsp-green;
 @color-error: @rsp-red;
 @color-warning: @rsp-orange;
+@color-open: @rsp-blue;
 
 // Font sizes
 @default-font-size: 15px;
