--- a/grid/css/muuri.less
+++ b/grid/css/muuri.less
@@ -122,7 +122,7 @@
         .item-container {
             background-color: #fff;
             position: relative;
-            box-shadow: 1px 1px @box_shadow_color;
+            box-shadow: 1px 1px @box-shadow;
             height: 100%;
             
             .item-content {
