--- a/assets/css/metabox.css
+++ b/assets/css/metabox.css
@@ -60,3 +60,4 @@
 #burst-metabox-experiment-settings .burst-experiment-save-button input {
   margin-top: 15px;
 }
+/*# sourceMappingURL=metabox.css.map */
