--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -547,6 +547,7 @@
 	  	&:before {
 			content: attr(data-text); /* here's the magic */
 			position:absolute;
+			z-index: 2;
 
 			/* vertically center */
 			top:50%;
