Design changes and changed our plugins to other plugins

--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -19,7 +19,8 @@
 
 @border-radius: 5px;
 @border: 1px solid @border-color;
-@box-shadow: 1px 1px @border-color;
+@box-shadow: 0 0 5px 5px rgba(222, 222, 222, 0.2);
+
 
 // RSP Brand Colors
 @rsp-black: #333;
@@ -53,4 +54,4 @@
 @color-open: @rsp-blue;
 
 // Font sizes
-@default-font-size: 15px;
+@default-font-size: 13px;
