--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -1,9 +1,6 @@
-@gridblock_height: 50vh;
-@gridblock_width: 50%;
-@gridblock_width_small: 25%;
-@grid_margin:10px;
+@grid-margin:10px;
 
-// break points
+// Break points
 @break-xs: 400px;
 @break-s: 600px;
 @break-m: 768px;
@@ -17,9 +14,11 @@
 @default-padding: 20px;
 @big-margin: 30px;
 
-@border-radius: 5px;
+@border-radius: 3px;
 @border: 1px solid @border-color;
-@box-shadow: 0 0 5px 5px rgba(222, 222, 222, 0.2);
+@box-shadow:  0 1px 1px rgba(0,0,0,0.12),
+              0 2px 2px rgba(0,0,0,0.10),
+              0 4px 4px rgba(0,0,0,0.04);
 
 
 // RSP Brand Colors
