--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -3,7 +3,8 @@
 }
 .burst-block {
   background: #fff;
-  box-shadow: 0 0 5px 5px rgba(222, 222, 222, 0.2);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.04);
+  border-radius: 3px;
   margin: 0;
 }
 .burst-date-container {
@@ -131,7 +132,7 @@
 #burst .upsell-grid-container .burst-upsell .plugin-status {
   margin-left: auto;
 }
-#burst .burst-notice-container {
+#burst .burst-notice-container:not(empty) {
   min-height: 46px;
 }
 #burst .burst-notice {
@@ -429,7 +430,8 @@
 }
 #burst #burst-content-area .burst-grid .burst-grid-container {
   background: #fff;
-  box-shadow: 0 0 5px 5px rgba(222, 222, 222, 0.2);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.04);
+  border-radius: 3px;
   margin: 0;
   display: flex;
   flex-wrap: wrap;
@@ -691,7 +693,7 @@
 .burst-experiment-status {
   display: flex;
   padding: 5px 7px;
-  border-radius: 5px;
+  border-radius: 3px;
   justify-content: flex-start;
   align-items: center;
 }
@@ -743,7 +745,6 @@
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 .burst-slider:before {
@@ -754,7 +755,6 @@
   left: 4px;
   bottom: 3px;
   background-color: white;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 .burst-slider.burst-round {
@@ -771,7 +771,6 @@
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 .burst-slider-na:before {
@@ -786,8 +785,6 @@ input:checked + .burst-slider {
   background-color: #61CE70;
 }
 input:checked + .burst-slider:before {
-  -webkit-transform: translateX(17px);
-  -ms-transform: translateX(17px);
   transform: translateX(17px);
 }
 input:checked:disabled + .burst-slider {
@@ -804,4 +801,3 @@ input:focus + .burst-slider {
 .wp-core-ui .button.button-tertiary:hover {
   background-color: #b92538;
 }
-/*# sourceMappingURL=admin.css.map */
