Added icons and some css improvements

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -185,7 +185,7 @@
   background-color: transparent;
   cursor: pointer;
 }
-#burst .burst-notice button .cmplz-close-notice-x {
+#burst .burst-notice button .burst-close-notice-x {
   color: #ccc;
   font-size: 0.9em;
 }
