--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -178,7 +178,7 @@
 			border: 0;
 			background-color: transparent;
 			cursor:pointer;
-			.cmplz-close-notice-x {
+			.burst-close-notice-x {
 				color: #ccc;
 				font-size: 0.9em;
 			}
