--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -14,6 +14,11 @@
 @default-padding: 20px;
 @big-margin: 30px;
 
+// Grid settings
+@red-gap: 15px;
+@green-gap: 20px;
+@intro-gap: 20px 20px 0 20px;
+
 @border-radius: 3px;
 @border: 1px solid @border-color;
 @box-shadow:  0 1px 1px rgba(0,0,0,0.12),
@@ -43,8 +48,10 @@
 @border-color: #DEDEDE;
 
 @grey: #c6c6c6;
+@grey-lighter: #fafafa;
 @grey-light: #ededed;
 @grey-dark: #737373;
+@grey-darker: #696969;
 
 // Notification colors
 @color-success: @rsp-green;
